--- a/src/core/styles/input.css
+++ b/src/core/styles/input.css
@@ -1,4 +1,3 @@
-@import "./mixins/mixin";
 .picker-input-wrapper {
   margin: 0;
   padding-inline: 4px;
@@ -8,10 +7,14 @@
   border: 1px solid rgba(0, 0, 0, 0.23);
   overflow: hidden;
   border-radius: 4px;
-  @include flex-row;
-  &:hover {
-    border-color: var(--highlight);
-  }
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.picker-input-wrapper:hover {
+  border-color: var(--highlight);
 }
 
 .picker-input-fa {
@@ -21,7 +24,7 @@
   height: 100%;
   font-size: 14px;
   padding-inline: 4px;
-  @include font-family;
+  font-family: IRANSansRegular;
   color: var(--text-dark);
   direction: rtl;
 }
@@ -32,7 +35,7 @@
   height: 100%;
   font-size: 14px;
   padding-inline: 4px;
-  @include font-family-en;
+  font-family: RobotoRegular;
   color: var(--text-dark);
   direction: ltr;
 }
@@ -41,24 +44,26 @@
   width: 20px;
   height: 20px;
   padding-inline: 4px;
-  @include flex-center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   cursor: pointer;
   filter: invert(0.4);
-  &:hover {
-    filter: invert(0.4);
-  }
 }
 
 .clear-icon {
   width: 20px;
   height: 20px;
   padding-inline: 4px;
-  @include flex-center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   cursor: pointer;
   filter: invert(0.7);
-  &:hover {
-    filter: invert(0.4);
-  }
+}
+
+.clear-icon:hover {
+  filter: invert(0.4);
 }
 
 .rtl {
