--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -13,59 +13,59 @@
 
 @font-face {
   font-family: IRANSansRegular;
-  src: url("../assets/fonts/IRANSansFaNum.ttf") format("woff");
+  src: url("../../public/assets/fonts/IRANSansFaNum.ttf") format("woff");
 }
 
 @font-face {
   font-family: IRANSansBold;
-  src: url("../assets/fonts/IRANSansFaNum_Bold.ttf") format("woff");
+  src: url("../../public/assets/fonts/IRANSansFaNum_Bold.ttf") format("woff");
 }
 
 @font-face {
   font-family: IRANSansLight;
-  src: url("../assets/fonts/IRANSansFaNum_Light.ttf") format("woff");
+  src: url("../../public/assets/fonts/IRANSansFaNum_Light.ttf") format("woff");
 }
 
 @font-face {
   font-family: IRANSansMedium;
-  src: url("../assets/fonts/IRANSansFaNum_Medium.ttf") format("woff");
+  src: url("../../public/assets/fonts/IRANSansFaNum_Medium.ttf") format("woff");
 }
 
 @font-face {
   font-family: RobotoLight;
-  src: url("../assets/fonts/Roboto-Light.ttf") format("woff");
+  src: url("../../public/assets/fonts/Roboto-Light.ttf") format("woff");
 }
 
 @font-face {
   font-family: RobotoRegular;
-  src: url("../assets/fonts/Roboto-Regular.ttf") format("woff");
+  src: url("../../public/assets/fonts/Roboto-Regular.ttf") format("woff");
 }
 
 @font-face {
   font-family: RobotoMedium;
-  src: url("../assets/fonts/Roboto-Medium.ttf") format("woff");
+  src: url("../../public/assets/fonts/Roboto-Medium.ttf") format("woff");
 }
 
 @font-face {
   font-family: RobotoBold;
-  src: url("../assets/fonts/Roboto-Bold.ttf") format("woff");
+  src: url("../../public/assets/fonts/Roboto-Bold.ttf") format("woff");
 }
 
 @font-face {
   font-family: IcomoonWOFF;
-  src: url("../../assets/fonts/icomoon/icomoon.woff") format("woff");
+  src: url("../../public/assets/fonts/icomoon/icomoon.woff") format("woff");
 }
 @font-face {
   font-family: IcomoonTTF;
-  src: url("../../assets/fonts/icomoon/icomoon.ttf") format("truetype");
+  src: url("../../public/assets/fonts/icomoon/icomoon.ttf") format("truetype");
 }
 @font-face {
   font-family: IcomoonSVG;
-  src: url("../../assets/fonts/icomoon/icomoon.svg") format("svg");
+  src: url("../../public/assets/fonts/icomoon/icomoon.svg") format("svg");
 }
 @font-face {
   font-family: IcomoonEOT;
-  src: url("../../assets/fonts/icomoon/icomoon.eot") format("eot");
+  src: url("../../public/assets/fonts/icomoon/icomoon.eot") format("eot");
 }
 
 .icon {
