--- a/src/styles/months.css
+++ b/src/styles/months.css
@@ -44,6 +44,6 @@
 }
 
 .month-item-selected {
-  background-color: var(--highlight);
+  background-color: var(--primary);
   color: var(--text-light);
 }
