--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,6 +1,6 @@
 :root {
-  --highlight: #18c5ff;
-  --highlight-fade: #e1f7ff;
+  --primary: #18c5ff;
+  --primary-fade: #e1f7ff;
   --text-dark: #000000;
   --text-light: #ffffff;
   --background: #ffffff;
@@ -9,6 +9,8 @@
   --border: #edededc7;
   --text-negative: #f83959;
   --day-label-background: #555555;
+  --highlight:#18c5ff;
+  --weekend:#f83959;
 }
 
 @font-face {
