--- a/src/styles/popup.css
+++ b/src/styles/popup.css
@@ -25,6 +25,8 @@
   animation-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   animation-duration: 200ms;
   transition: all 200ms cubic-bezier(0.4, 0, 0.2, 1);
+  box-shadow: 0px 0px 4px rgba(0,0,0,.2);
+
 }
 
 .popover-panel-close {
