--- a/src/styles/input.css
+++ b/src/styles/input.css
@@ -2,7 +2,7 @@
   margin: 0;
   padding-inline: 4px;
   height: 34px;
-  width: 400px;
+  min-width: 400px;
   max-width: 100%;
   border: 1px solid rgba(0, 0, 0, 0.23);
   overflow: hidden;
@@ -18,6 +18,7 @@
   margin: 0;
   height: 34px;
   width: fit-content;
+  min-width: 400px;
   max-width: 100%;
   border: 1px solid rgba(0, 0, 0, 0.23);
   overflow: hidden;
@@ -27,7 +28,7 @@
   flex-direction: row;
   justify-content: center;
   position: relative;
-  padding-inline-start: 8px;
+  padding-inline-start: 4px;
   padding-inline-end: 4px;
   background-color: var(--background);
 }
