--- a/src/styles/input.css
+++ b/src/styles/input.css
@@ -17,7 +17,7 @@
 .range-input-wrapper {
   margin: 0;
   height: 34px;
-  width: fit-content;
+  width: 100%;
   min-width: 400px;
   max-width: 100%;
   border: 1px solid rgba(0, 0, 0, 0.23);
