--- a/src/styles/months.css
+++ b/src/styles/months.css
@@ -1,49 +1,49 @@
 .months-body {
-  display: grid;
-  height: 100%;
-  max-width: 300px;
-  place-items: center;
-  grid-template-columns: repeat(3, minmax(100px, 100px));
-  grid-template-rows: auto;
+    display: grid;
+    height: 100%;
+    max-width: 300px;
+    place-items: center;
+    grid-template-columns: repeat(3, minmax(100px, 100px));
+    grid-template-rows: auto;
 }
 
 .months-body-rtl {
-  display: grid;
-  height: 100%;
-  max-width: 300px;
-  place-items: center;
-  grid-template-columns: repeat(3, minmax(100px, 100px));
-  grid-template-rows: auto;
-  direction: rtl;
+    display: grid;
+    height: 100%;
+    max-width: 300px;
+    place-items: center;
+    grid-template-columns: repeat(3, minmax(100px, 100px));
+    grid-template-rows: auto;
+    direction: rtl;
 }
 
 .months-body-ltr {
-  display: grid;
-  height: 100%;
-  max-width: 300px;
-  place-items: center;
-  grid-template-columns: repeat(3, minmax(100px, 100px));
-  grid-template-rows: auto;
-  direction: ltr;
+    display: grid;
+    height: 100%;
+    max-width: 300px;
+    place-items: center;
+    grid-template-columns: repeat(3, minmax(100px, 100px));
+    grid-template-rows: auto;
+    direction: ltr;
 }
 
 .month-item {
-  padding-block: 4px;
-  border-radius: 2px;
-  cursor: pointer;
-  transition: background-color 100ms ease;
-  min-width: 80px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: var(--text-dark);
+    padding-block: 4px;
+    border-radius: 2px;
+    cursor: pointer;
+    transition: background-color 100ms ease;
+    min-width: 80px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: var(--text);
 }
 
 .month-item-hovered:hover {
-  background-color: var(--background-hovered);
+    background-color: var(--background-hovered);
 }
 
 .month-item-selected {
-  background-color: var(--primary);
-  color: var(--text-light);
+    background-color: var(--primary);
+    color: var(--text-primary);
 }
