--- a/src/styles/panel.css
+++ b/src/styles/panel.css
@@ -1,499 +1,500 @@
 .panel {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 300px;
-  height: 352px;
-  max-height: 352px;
-  background-color: var(--background);
-  border-radius: 2px;
-  overflow: hidden;
-  flex-direction: column;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 300px;
+    height: 352px;
+    max-height: 352px;
+    background-color: var(--background);
+    border-radius: 2px;
+    overflow: hidden;
+    flex-direction: column;
 }
+
 .panel p {
-  margin-block: 0;
-  font-size: 14px;
+    margin-block: 0;
+    font-size: 14px;
 }
 
 .panel-range {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 600px;
-  height: 312px;
-  max-height: 312px;
-  background-color: var(--background);
-  border-radius: 2px;
-  overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 600px;
+    height: 312px;
+    max-height: 312px;
+    background-color: var(--background);
+    border-radius: 2px;
+    overflow: hidden;
 }
 
 .panel-range p {
-  margin-block: 0;
-  font-size: 14px;
+    margin-block: 0;
+    font-size: 14px;
 }
 
 .panel-wrapper {
-  display: flex;
-  flex-direction: column;
-  height: 100%;
-  width: 100%;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    width: 100%;
 }
 
 .range-day-wrapper {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  width: 100%;
-  height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
 }
 
 .range-day-panel {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
-  height: 100%;
-  width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    height: 100%;
+    width: 100%;
 }
 
 .range-day-panel-item {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  height: 100%;
-  width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100%;
+    width: 100%;
 }
 
 .panel-elevation {
-  box-shadow: 0px 0px 1px -1px rgb(0 0 0 / 20%),
-    0px 1px 1px 0px rgb(0 0 0 / 14%), 0px 1px 3px 0px rgb(0 0 0 / 12%);
+    box-shadow: 0px 0px 1px -1px rgb(0 0 0 / 20%), 0px 1px 1px 0px rgb(0 0 0 / 14%), 0px 1px 3px 0px rgb(0 0 0 / 12%);
 }
 
 .panel-jalaali {
-  font-family: IRANSansRegular;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 300px;
-  height: 352px;
-  max-height: 352px;
-  background-color: var(--background);
-  border-radius: 2px;
-  overflow: hidden;
-  flex-direction: column;
-  direction: rtl;
+    font-family: IRANSansRegular;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 300px;
+    height: 352px;
+    max-height: 352px;
+    background-color: var(--background);
+    border-radius: 2px;
+    overflow: hidden;
+    flex-direction: column;
+    direction: rtl;
 }
 
 .panel-jalaali p {
-  margin-block: 0;
-  font-size: 14px;
+    margin-block: 0;
+    font-size: 14px;
 }
 
 .panel-gregorian {
-  font-family: RobotoRegular;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 300px;
-  height: 352px;
-  max-height: 352px;
-  background-color: var(--background);
-  border-radius: 2px;
-  overflow: hidden;
-  flex-direction: column;
-  direction: ltr;
+    font-family: RobotoRegular;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 300px;
+    height: 352px;
+    max-height: 352px;
+    background-color: var(--background);
+    border-radius: 2px;
+    overflow: hidden;
+    flex-direction: column;
+    direction: ltr;
 }
 
 .panel-gregorian p {
-  margin-block: 0;
-  font-size: 14px;
+    margin-block: 0;
+    font-size: 14px;
 }
 
 .panel-range-jalaali {
-  font-family: IRANSansRegular;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 600px;
-  height: 312px;
-  max-height: 312px;
-  background-color: var(--background);
-  border-radius: 2px;
-  overflow: hidden;
-  direction: rtl;
+    font-family: IRANSansRegular;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 600px;
+    height: 312px;
+    max-height: 312px;
+    background-color: var(--background);
+    border-radius: 2px;
+    overflow: hidden;
+    direction: rtl;
 }
 
 .panel-range-jalaali p {
-  margin-block: 0;
-  font-size: 14px;
+    margin-block: 0;
+    font-size: 14px;
 }
 
 .panel-range-gregorian {
-  font-family: RobotoRegular;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 600px;
-  height: 312px;
-  max-height: 312px;
-  background-color: var(--background);
-  border-radius: 2px;
-  overflow: hidden;
-  direction: ltr;
-  background-color: var(--background);
+    font-family: RobotoRegular;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 600px;
+    height: 312px;
+    max-height: 312px;
+    background-color: var(--background);
+    border-radius: 2px;
+    overflow: hidden;
+    direction: ltr;
+    background-color: var(--background);
 }
 
 .panel-range-gregorian p {
-  margin-block: 0;
-  font-size: 14px;
+    margin-block: 0;
+    font-size: 14px;
 }
 
 .panel-header {
-  width: 100%;
-  min-height: 40px;
-  display: flex;
-  align-items: center;
-  flex-direction: row;
-  justify-content: center;
-  overflow: hidden;
-  border-bottom: 1px solid var(--border);
-  background-color: var(--background);
+    width: 100%;
+    min-height: 40px;
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    justify-content: center;
+    overflow: hidden;
+    border-bottom: 1px solid var(--border);
+    background-color: var(--background);
 }
 
 .panel-header-rtl {
-  width: 100%;
-  min-height: 40px;
-  display: flex;
-  align-items: center;
-  flex-direction: row;
-  justify-content: center;
-  overflow: hidden;
-  border-bottom: 1px solid var(--border);
-  background-color: var(--background);
-  direction: rtl;
+    width: 100%;
+    min-height: 40px;
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    justify-content: center;
+    overflow: hidden;
+    border-bottom: 1px solid var(--border);
+    background-color: var(--background);
+    direction: rtl;
 }
 
 .panel-header-ltr {
-  width: 100%;
-  min-height: 40px;
-  display: flex;
-  align-items: center;
-  flex-direction: row;
-  justify-content: center;
-  overflow: hidden;
-  border-bottom: 1px solid var(--border);
-  background-color: var(--background);
-  direction: ltr;
+    width: 100%;
+    min-height: 40px;
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    justify-content: center;
+    overflow: hidden;
+    border-bottom: 1px solid var(--border);
+    background-color: var(--background);
+    direction: ltr;
 }
 
 .panel-outer-wrapper {
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-  display: block;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    display: block;
 }
 
 .panel-header-wrapper {
-  width: 100%;
-  min-height: 40px;
+    width: 100%;
+    min-height: 40px;
 }
 
 .panel-footer-wrapper {
-  width: 100%;
-  min-height: 40px;
+    width: 100%;
+    min-height: 40px;
 }
 
 .panel-empty-holder {
-  width: 36px;
-  pointer-events: none;
-  visibility: hidden;
+    width: 36px;
+    pointer-events: none;
+    visibility: hidden;
 }
 
 .panel-header-inner {
-  flex: 1;
-  margin-inline: 12px;
-  max-height: 100%;
-  max-width: 300px;
-  display: flex;
-  align-items: center;
-  flex-direction: row;
-  justify-content: space-between;
+    flex: 1;
+    margin-inline: 12px;
+    max-height: 100%;
+    max-width: 300px;
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    justify-content: space-between;
 }
 
 .panel-header-inner-rtl {
-  flex: 1;
-  margin-inline: 12px;
-  max-height: 100%;
-  max-width: 300px;
-  display: flex;
-  align-items: center;
-  flex-direction: row;
-  justify-content: space-between;
-  direction: rtl;
+    flex: 1;
+    margin-inline: 12px;
+    max-height: 100%;
+    max-width: 300px;
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    justify-content: space-between;
+    direction: rtl;
 }
 
 .panel-header-inner-ltr {
-  flex: 1;
-  margin-inline: 12px;
-  max-height: 100%;
-  max-width: 300px;
-  display: flex;
-  align-items: center;
-  flex-direction: row;
-  justify-content: space-between;
-  direction: ltr;
+    flex: 1;
+    margin-inline: 12px;
+    max-height: 100%;
+    max-width: 300px;
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    justify-content: space-between;
+    direction: ltr;
 }
 
 .panel-date-holder {
-  display: flex;
-  align-items: center;
-  flex-direction: row;
-  justify-content: center;
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    justify-content: center;
 }
 
 .panel-date-holder-item {
-  display: flex;
-  align-items: center;
-  flex-direction: row;
-  justify-content: center;
-  margin-inline: 2px;
-  padding-inline: 2px;
-  font-size: 14px;
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    justify-content: center;
+    margin-inline: 2px;
+    padding-inline: 2px;
+    font-size: 14px;
 }
 
 .panel-date-holder-item p {
-  font-size: 14px;
+    font-size: 14px;
 }
 
 .panel-date-holder-item-rtl {
-  display: flex;
-  align-items: center;
-  flex-direction: row;
-  justify-content: center;
-  direction: rtl;
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    justify-content: center;
+    direction: rtl;
 }
 
 .panel-date-holder-item-ltr {
-  display: flex;
-  align-items: center;
-  flex-direction: row;
-  justify-content: center;
-  direction: ltr;
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    justify-content: center;
+    direction: ltr;
 }
 
 .days-body {
-  display: grid;
-  height: 100%;
-  margin-block: 4px;
-  max-width: 300px;
-  grid-template-columns: repeat(7, minmax(38px, 38px));
-  grid-template-rows: auto;
-  overflow: hidden;
-  background-color: var(--background);
+    display: grid;
+    height: 100%;
+    margin-block: 4px;
+    max-width: 300px;
+    grid-template-columns: repeat(7, minmax(38px, 38px));
+    grid-template-rows: auto;
+    overflow: hidden;
+    background-color: var(--background);
 }
 
 .panel-footer {
-  width: 100%;
-  min-height: 40px;
-  display: flex;
-  align-items: center;
-  flex-direction: row;
-  justify-content: center;
-  border-top: 1px solid var(--border);
-  background-color: var(--background);
+    width: 100%;
+    min-height: 40px;
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    justify-content: center;
+    border-top: 1px solid var(--border);
+    background-color: var(--background);
 }
 
 .panel-footer-rtl {
-  width: 100%;
-  min-height: 40px;
-  display: flex;
-  align-items: center;
-  flex-direction: row;
-  justify-content: center;
-  border-top: 1px solid var(--border);
-  background-color: var(--background);
-  direction: rtl;
+    width: 100%;
+    min-height: 40px;
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    justify-content: center;
+    border-top: 1px solid var(--border);
+    background-color: var(--background);
+    direction: rtl;
 }
 
 .panel-footer-ltr {
-  width: 100%;
-  min-height: 40px;
-  display: flex;
-  align-items: center;
-  flex-direction: row;
-  justify-content: center;
-  border-top: 1px solid var(--border);
-  background-color: var(--background);
-  direction: ltr;
+    width: 100%;
+    min-height: 40px;
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    justify-content: center;
+    border-top: 1px solid var(--border);
+    background-color: var(--background);
+    direction: ltr;
 }
 
 .day-label-bar {
-  width: 100%;
-  max-width: 284px;
-  min-height: 28px;
-  margin-top: 8px;
-  overflow: hidden;
-  display: flex;
-  align-items: center;
-  flex-direction: row;
-  justify-content: center;
+    width: 100%;
+    max-width: 284px;
+    min-height: 28px;
+    margin-top: 8px;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    justify-content: center;
 }
 
 .day-label-bar-inner {
-  margin-inline: 8px;
-  width: 100%;
-  min-height: 28px;
-  display: flex;
-  align-items: center;
-  flex-direction: row;
-  justify-content: space-between;
-  background-color: var(--day-label-background);
-  border-radius: 2px;
-  padding-inline: 6px;
+    margin-inline: 8px;
+    width: 100%;
+    min-height: 28px;
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    justify-content: space-between;
+    background-color: var(--day-label-background);
+    border-radius: 2px;
+    padding-inline: 6px;
 }
 
 .day-label-bar-inner-rtl {
-  margin-inline: 8px;
-  width: 100%;
-  min-height: 28px;
-  display: flex;
-  align-items: center;
-  flex-direction: row;
-  justify-content: space-between;
-  background-color: var(--day-label-background);
-  border-radius: 2px;
-  padding-inline: 6px;
-  direction: rtl;
+    margin-inline: 8px;
+    width: 100%;
+    min-height: 28px;
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    justify-content: space-between;
+    background-color: var(--day-label-background);
+    border-radius: 2px;
+    padding-inline: 6px;
+    direction: rtl;
 }
 
 .day-label-bar-inner-ltr {
-  margin-inline: 8px;
-  width: 100%;
-  min-height: 28px;
-  display: flex;
-  align-items: center;
-  flex-direction: row;
-  justify-content: space-between;
-  background-color: var(--day-label-background);
-  border-radius: 2px;
-  padding-inline: 6px;
-  direction: ltr;
+    margin-inline: 8px;
+    width: 100%;
+    min-height: 28px;
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    justify-content: space-between;
+    background-color: var(--day-label-background);
+    border-radius: 2px;
+    padding-inline: 6px;
+    direction: ltr;
 }
 
 .day-label-item {
-  width: 30px;
-  min-height: 28px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  color: var(--text-light);
-  font-size: 14px;
-  user-select: none;
+    width: 30px;
+    min-height: 28px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    color: var(--text-primary);
+    font-size: 14px;
+    user-select: none;
 }
 
 .today-text {
-  transition: color 100ms ease;
-  color: var(--text-dark);
+    transition: color 100ms ease;
+    color: var(--text);
 }
 
 .today-text:hover {
-  color: var(--primary);
+    color: var(--primary);
 }
 
 .day-item-after::after {
-  content: "";
-  position: absolute;
-  height: 30px;
-  width: 8px;
-  top: 0;
-  right: 0;
-  background-color: var(--primary);
+    content: "";
+    position: absolute;
+    height: 30px;
+    width: 8px;
+    top: 0;
+    right: 0;
+    background-color: var(--primary);
 }
 
 .day-item-before::before {
-  content: "";
-  position: absolute;
-  height: 30px;
-  width: 8px;
-  top: 0;
-  left: 0;
-  background-color: var(--primary);
+    content: "";
+    position: absolute;
+    height: 30px;
+    width: 8px;
+    top: 0;
+    left: 0;
+    background-color: var(--primary);
 }
 
 .day-item-both::before {
-  content: "";
-  position: absolute;
-  height: 30px;
-  width: 8px;
-  top: 0;
-  left: 0;
-  background-color: var(--primary);
+    content: "";
+    position: absolute;
+    height: 30px;
+    width: 8px;
+    top: 0;
+    left: 0;
+    background-color: var(--primary);
 }
 
 .day-item-both::after {
-  content: "";
-  position: absolute;
-  height: 30px;
-  width: 8px;
-  top: 0;
-  right: 0;
-  background-color: var(--primary);
+    content: "";
+    position: absolute;
+    height: 30px;
+    width: 8px;
+    top: 0;
+    right: 0;
+    background-color: var(--primary);
 }
 
 .day-item-outer {
-  position: relative;
-  min-width: 38px;
-  min-height: 38px;
-  overflow: hidden;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background: transparent;
+    position: relative;
+    min-width: 38px;
+    min-height: 38px;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: transparent;
 }
 
 .day-item-chain {
-  position: relative;
-  min-width: 38px;
-  height: 30px;
-  overflow: hidden;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background: transparent;
+    position: relative;
+    min-width: 38px;
+    height: 30px;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: transparent;
 }
 
 .disabled {
-  opacity: 0.4;
-  cursor: not-allowed !important;
-  background-color: var(--background-disabled);
+    opacity: 0.4;
+    cursor: not-allowed !important;
+    background-color: var(--background-disabled);
 }
+
 .highlight-day {
-  background-color: var(--primary-fade);
-  color: var(--text-dark);
+    background-color: var(--primary-fade);
+    color: var(--text);
 }
 
 .start-tail-highlight::after {
-  content: "";
-  position: absolute;
-  left: -4px;
-  top: 0;
-  width: 4px;
-  height: 100%;
-  background: var(--primary-fade);
-  border: none;
-  outline: none;
+    content: "";
+    position: absolute;
+    left: -4px;
+    top: 0;
+    width: 4px;
+    height: 100%;
+    background: var(--primary-fade);
+    border: none;
+    outline: none;
 }
 
 .end-tail-highlight::before {
-  content: "";
-  position: absolute;
-  right: -4px;
-  top: 0;
-  width: 4px;
-  height: 100%;
-  background: var(--primary-fade);
-  border: none;
-  outline: none;
+    content: "";
+    position: absolute;
+    right: -4px;
+    top: 0;
+    width: 4px;
+    height: 100%;
+    background: var(--primary-fade);
+    border: none;
+    outline: none;
 }
