--- a/src/styles/input.css
+++ b/src/styles/input.css
@@ -1,128 +1,137 @@
 .picker-input-wrapper {
-    margin: 0;
-    padding-inline: 4px;
-    height: 36px;
-    min-width: 400px;
-    max-width: 100%;
-    border: 1px solid rgba(0, 0, 0, 0.23);
-    overflow: hidden;
-    border-radius: 4px;
-    display: flex;
-    align-items: center;
-    flex-direction: row;
-    justify-content: center;
-    background-color: var(--background);
+  margin: 0;
+  height: 36px;
+  line-height: 1;
+  width: 100%;
+  min-width: 400px;
+  max-width: 100%;
+  border: 1px solid rgba(0, 0, 0, 0.23);
+  overflow: hidden;
+  border-radius: 4px;
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  justify-content: center;
+  background-color: var(--background);
 }
 
 .range-input-wrapper {
-    margin: 0;
-    height: 36px;
-    width: 100%;
-    min-width: 400px;
-    max-width: 100%;
-    border: 1px solid rgba(0, 0, 0, 0.23);
-    overflow: hidden;
-    border-radius: 4px;
-    display: flex;
-    align-items: center;
-    flex-direction: row;
-    justify-content: center;
-    position: relative;
-    padding-inline-start: 4px;
-    padding-inline-end: 4px;
-    background-color: var(--background);
+  margin: 0;
+  height: 36px;
+  line-height: 1;
+  width: 100%;
+  min-width: 400px;
+  max-width: 100%;
+  border: 1px solid rgba(0, 0, 0, 0.23);
+  overflow: hidden;
+  border-radius: 4px;
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  justify-content: center;
+  position: relative;
+  background-color: var(--background);
 }
 
 .picker-input-wrapper:hover {
-    border-color: var(--primary);
+  border-color: var(--primary);
 }
 
 .range-input-wrapper:hover {
-    border-color: var(--primary);
+  border-color: var(--primary);
 }
 
 .picker-input-fa {
-    border: none;
-    outline: none;
-    width: 100%;
-    height: 100%;
-    font-size: 14px;
-    padding-inline: 4px;
-    font-family: IRANSansRegular;
-    color: var(--text);
-    direction: rtl;
-    background-color: var(--background);
+  border: none;
+  outline: none;
+  width: 100%;
+  height: 100%;
+  font-size: 16px;
+  padding-inline: 8px;
+  font-family: IRANSansRegular;
+  color: var(--text);
+  direction: rtl;
+  background-color: var(--background);
 }
 
 .picker-input-en {
-    border: none;
-    outline: none;
-    width: 100%;
-    height: 100%;
-    font-size: 14px;
-    padding-inline: 0px;
-    font-family: RobotoRegular;
-    color: var(--text);
-    direction: ltr;
-    background-color: var(--background);
+  border: none;
+  outline: none;
+  width: 100%;
+  height: 100%;
+  font-size: 16px;
+  padding-inline: 8px;
+  font-family: -apple-system, BlinkMacSystemFont, segoe ui, Roboto,
+    helvetica neue, Arial, noto sans, sans-serif, apple color emoji,
+    segoe ui emoji, segoe ui symbol, noto color emoji;
+  color: var(--text);
+  direction: ltr;
+  background-color: var(--background);
 }
 
 .range-input-fa {
-    border: none;
-    outline: none;
-    width: 100%;
-    height: 100%;
-    font-size: 14px;
-    padding-inline: 0px;
-    margin-inline: 2px;
-    font-family: IRANSansRegular;
-    color: var(--text);
-    direction: rtl;
-    background-color: var(--background);
+  border: none;
+  outline: none;
+  width: 100%;
+  height: 100%;
+  font-size: 14px;
+  line-height: 36px;
+  padding-inline: 8px;
+  font-family: IRANSansRegular;
+  color: var(--text);
+  direction: rtl;
+  background-color: var(--background);
 }
 
 .range-input-en {
-    border: none;
-    outline: none;
-    width: 100%;
-    height: 100%;
-    font-size: 14px;
-    padding-inline: 0px;
-    margin-inline: 2px;
-    font-family: RobotoRegular;
-    color: var(--text);
-    direction: ltr;
-    background-color: var(--background);
+  border: none;
+  outline: none;
+  width: 100%;
+  height: 100%;
+  font-size: 14px;
+  line-height: 36px;
+  padding-inline: 8px;
+  font-family: -apple-system, BlinkMacSystemFont, segoe ui, Roboto,
+    helvetica neue, Arial, noto sans, sans-serif, apple color emoji,
+    segoe ui emoji, segoe ui symbol, noto color emoji;
+  color: var(--text);
+  direction: ltr;
+  background-color: var(--background);
 }
 
 .calendar-icon {
-    min-width: 34px;
-    height: 100%;
-    margin-inline-start: 8px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
+  min-width: 36px;
+  height: 100%;
+  margin-inline-start: 8px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
 }
 
 .clear-icon {
-    width: 20px;
-    height: 20px;
-    padding-inline: 4px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
+  width: 20px;
+  height: 20px;
+  padding-inline: 4px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
 }
 
 .rtl {
-    direction: rtl;
+  direction: rtl;
 }
 
 .separator-icon {
-    height: 100%;
-    overflow: hidden;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  height: 100%;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.icon-wrapper {
+  padding-inline: 8px;
+  display: block;
 }
