--- a/src/styles/popup.css
+++ b/src/styles/popup.css
@@ -1,89 +1,94 @@
 @keyframes open {
-    from {
-        opacity: 0;
-        transform: scale(0.95, 0.95);
-    }
-    to {
-        opacity: 1;
-        transform: scale(1, 1);
-    }
+  from {
+    opacity: 0;
+    transform: scale(0.95, 0.95);
+  }
+  to {
+    opacity: 1;
+    transform: scale(1, 1);
+  }
 }
 
 @keyframes close {
-    from {
-        opacity: 1;
-        transform: scale(1, 1);
-    }
-    to {
-        transform: scale(0.95, 0.95);
-        opacity: 0;
-    }
+  from {
+    opacity: 1;
+    transform: scale(1, 1);
+  }
+  to {
+    transform: scale(0.95, 0.95);
+    opacity: 0;
+  }
 }
 
 .popup-wrapper-overlay {
-    width: 100%;
-    height: fit-content;
+  /* width: 100%; */
+  height: fit-content;
 }
 
 .input-wrapper {
-    width: 100%;
-    display: flex;
+  width: 100%;
+  display: flex;
 }
 
 .popup-panel-overlay {
-    overflow: hidden;
-    position: fixed;
-    margin: 0;
-    padding: 0;
-    z-index: 99999;
+  overflow: hidden;
+  position: fixed;
+  margin: 0;
+  padding: 0;
+  z-index: 99999;
 }
 
 .popover-panel-open {
-    animation-name: open;
-    animation-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-    animation-duration: 200ms;
-    transition: transform, opacity 200ms cubic-bezier(0.4, 0, 0.2, 1);
-    box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.2);
+  animation-name: open;
+  animation-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  animation-duration: 200ms;
+  transition: transform, opacity 200ms cubic-bezier(0.4, 0, 0.2, 1);
+  box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.2);
 }
 
 .popover-panel-close {
-    animation-name: close;
-    animation-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-    animation-duration: 170ms;
-    transition: transform, opacity 170ms cubic-bezier(0.4, 0, 0.2, 1);
-    opacity: 0;
+  animation-name: close;
+  animation-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  animation-duration: 170ms;
+  transition: transform, opacity 170ms cubic-bezier(0.4, 0, 0.2, 1);
+  opacity: 0;
 }
 
 .popover-panel-date {
-    max-height: 352px;
-    max-width: 300px;
+  max-height: 352px;
+  max-width: 300px;
 }
 
 .popover-panel-range {
-    max-height: 312px;
-    max-width: 600px;
+  max-height: 312px;
+  max-width: 600px;
+}
+
+.mobile-popover-panel-range {
+  max-height: 360px;
+  max-width: 600px;
 }
 
 .open-vert-top-right {
-    transform-origin: bottom left;
+  transform-origin: bottom left;
 }
 
 .open-vert-bottom-right {
-    transform-origin: top left;
+  transform-origin: top left;
 }
 
 .open-vert-top-left {
-    transform-origin: bottom right;
+  transform-origin: bottom right;
 }
 
 .open-vert-bottom-left {
-    transform-origin: top right;
+  transform-origin: top right;
 }
 
 .open-horz-left {
-    transform-origin: top right;
+  transform-origin: top right;
 }
 
 .open-horz-right {
-    transform-origin: top left;
+  transform-origin: top left;
 }
