--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1203,6 +1203,7 @@
   justify-content: center;
   align-items: center;
   position: relative;
+  overflow: hidden;
 }
 
 .time-clock-area::after {
@@ -1288,6 +1289,14 @@
   align-items: center;
   pointer-events: none;
   user-select: none;
+}
+
+.animated-clock-handle-hour {
+  transition: all 300ms linear;
+}
+
+.animated-clock-handle-minute {
+  transition: all 300ms linear;
 }
 
 .tick-hour-selected {
